activating the swagger rest service documentation by reverting the revertion of the premature committed experimental branch (swagger) svn: r21387, git: be528c1edf

--- a/cdmlib-remote-webapp/src/main/webapp/index.html
+++ b/cdmlib-remote-webapp/src/main/webapp/index.html
@@ -10,6 +10,8 @@
     the following APIs.</p>
   <h3>RESTful API</h3>
 
+  <a href="doc/">Documentation of the RESTful api.</a>
+
   <h3>OAI-PMH</h3>
   <ul>
     <li><a href="reference/oai?verb=Identify">OAI-PMH for References</a></li>
