index.html links to swagger-ui

--- a/cdmlib-remote-webapp/src/main/webapp/index.html
+++ b/cdmlib-remote-webapp/src/main/webapp/index.html
@@ -8,6 +8,7 @@
   <h1>CDM Remote API</h1>
   <p>This is the root of the CDM remote web application which offers
     the following APIs.</p>
+  <p>Experimental: Check out the <a href="swagger-ui" >swagger documentation of the web services</a>.</p>
   <h3>RESTful API</h3>
 
   <a href="doc/">Documentation of the RESTful api.</a>
