--- a/cdmlib-remote-webapp/src/main/webapp/index.html
+++ b/cdmlib-remote-webapp/src/main/webapp/index.html
@@ -9,19 +9,20 @@
   <p>This is the root of the CDM remote web application which offers
     the following APIs.</p>
   <h3>RESTful API</h3>
+  <ul>
+  <li><a href="doc/">Documentation of the RESTful api.</a>
+  <li><a href="doc/?group=Web+Portal+Services">CDM DataPortal optimized api </a>
+  <li><a href="doc/?group=Catalogue+Services">Catalogue Services</a>
+  </ul>
 
-  <a href="doc/">Documentation of the RESTful api.</a>
 
   <h3>OAI-PMH</h3>
+  <a href="doc/?group=OAI-PMH">Documentation of the OAI-PMH API</a>
   <ul>
     <li><a href="reference/oai?verb=Identify">OAI-PMH for References</a></li>
     <li><a href="taxon/oai?verb=Identify">OAI-PMH for Taxa</a></li>
     <li><a href="http://wp5.e-taxonomy.eu/cdmlib/oai-pmh.html">documentation</a></li>
   </ul>
-  <h3>RESTful API</h3>
-  <ul>
-    <li><a href="classification">Classifications</a></li>
-    <li>for more end points please refer to the<a href="http://wp5.e-taxonomy.eu/cdmlib/rest-api.html">documentation</a></li>
-  </ul>
+
 </body>
 </html>
